<resources>
    <string name="app_name">Campus Wi-Fi Scanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Campus Wi-Fi Scanner</string>
    <string name="nav_header_subtitle">disconnected</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Overview</string>
    <string name="menu_list">Access points</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_about">About</string>
    <string name="menu_about_app">About this app&#8230;</string>
    <string name="menu_settings">Settings&#8230;</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_wifi">Wi-Fi scan</string>
    <string name="pref_wifi_description">Only the APs with the specified SSIDs are scanned.</string>

    <string name="pref_wifi_ssid">SSID to scan</string>
    <string name="pref_wifi_ssid_secondary">Secondary SSID to scan</string>

    <string name="pref_wifi_all">Display all found APs</string>
    <string name="pref_wifi_all_description">This does not affect the collected data. In all cases only the APs with the selected SSID(s) are recorded.</string>

    <string name="pref_title_collection">Data collection</string>
    <string name="pref_collection_enabled">Enable data collection</string>
    <string name="pref_collection_enabled_description">Send the scan results to the central server.</string>

    <string name="title_activity_init">About</string>

    <string name="about_app_notice">This app collects location data and Wi-Fi scan results. The behavior can be configured in Settings.</string>
    <string name="about_app_version">Unknown version</string>
    <string name="about_start_button">Start</string>

    <string name="channel_name">Background Notification</string>
    <string name="channel_description">Background Service Notification</string>
    <string name="notification_background_title">Running in background</string>
    <string name="notification_background_scanning">Scanning for Wi-Fi&#8230;</string>
    <string name="notification_background_disconnected">Disconnected</string>
    
    <string name="message_updating">Updating&#8230;</string>

    <string name="home_location">Location updates</string>
    <string name="home_stats">Scan statistics</string>
</resources>
