<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_title_wifi">
        <EditTextPreference
            app:key="wifi_ssid_main"
            app:title="@string/pref_wifi_ssid"
            app:summary="@string/pref_wifi_description"
            app:defaultValue="UTokyo-WiFi" />

        <EditTextPreference
            app:key="wifi_ssid_secondary"
            app:title="@string/pref_wifi_ssid_secondary"
            app:defaultValue="eduroam" />

        <SwitchPreference
            app:key="wifi_scan_all"
            app:title="@string/pref_wifi_all"
            app:summary="@string/pref_wifi_all_description"
            app:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_title_collection">
        <SwitchPreference
            app:key="collection_enabled"
            app:title="@string/pref_collection_enabled"
            app:summary="@string/pref_collection_enabled_description"
            app:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>
