<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_wifi_black_24dp"
            android:title="@string/menu_list" />

    </group>

    <item android:title="@string/menu_about">
        <menu>
            <item
                android:id="@+id/nav_about_app"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_about_app" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
